# wslg

./: .dockerignore  .gitignore  CONTRIBUTING.fu  CONTRIBUTING.md  Dockerfile  Dockerfile.ARM64  Dockerfile.Mariner  Dockerfile.MarinerARM64  GitVersion.yml  Microsoft.WSLG.nuspec  Microsoft.WSLG.targets  Microsoft.WSLg.nuspec  Microsoft.WSLg.targets  README.md  SECURITY.md  azure-pipelines.yml  build-and-export.sh  cgmanifest.json  launch.sh  rail-weston.rdp  updateversion.ps1
.github/: CODEOWNERS  SUPPORT.md  TRIAGE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: codeql.yml  lint.yml  stale.yml
WSLDVCPlugin/: RegisterWSLPlugin.reg  UpdateRCVersion.ps1  WSLDVCCallback.cpp  WSLDVCCallback.h  WSLDVCFileDB.cpp  WSLDVCFileDB.h  WSLDVCListenerCallback.cpp  WSLDVCListenerCallback.h  WSLDVCPlugin.cpp  WSLDVCPlugin.def  WSLDVCPlugin.h  WSLDVCPlugin.rc  WSLDVCPlugin.rc.in  WSLDVCPlugin.sln  WSLDVCPlugin.vcxproj  WSLDVCPlugin.vcxproj.filters  cpp.hint  dllmain.cpp  framework.h  pch.cpp  pch.h  rdpapplist.h  resource.h  utils.cpp  utils.h
WSLGd/: FontMonitor.cpp  FontMonitor.h  Makefile  ProcessMonitor.cpp  ProcessMonitor.h  common.h  lxwil.h  main.cpp  makefile  meson.build  precomp.h  trace.h
config/: BUILD.md  aarch64-system-distro.conf  default.pa  default_wslg.pa  local.conf  pipewire-pulse.conf  pipewire-rdp-module.c  pipewire-wslg-rdp.patch  pipewire.conf  system-distro.conf  weston.ini  wsl.conf  x86_64-system-distro.conf  xorg.conf  xwayland_log.patch
debuginfo/: FreeRDP.list  FreeRDP2.list  FreeRDP3.list  WSLGd.list  gen_debuginfo.sh  rdpapplist.list  strip_debuginfo.sh  weston.list
devops/: common-linux.yml  common-win.yml  get-nuget-version.sh  getversion.ps1  updateversion.ps1  version_functions.ps1
docs/: TRACING.md  TRACING_EXAMPLES.md  TRACING_QUICK_REF.md  install-sample-gui-apps.sh
msi/: WSLG.wxs  updateversion.ps1  wslg.rdp  wslg.wxs
package/: wslg.rdp  wslg_desktop.rdp
rdpapplist/: meson.build  rdpapplist_common.c  rdpapplist_common.h  rdpapplist_protocol.h  rdpapplist_server.h
rdpapplist/server/: meson.build  rdpapplist_main.c  rdpapplist_main.h
samples/container/: Containers.md  Dockerfile.glxgears  Dockerfile.glxinfo  Dockerfile.xclock  build.sh  run.sh
